# code-review-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  HOW-TO.md  Makefile  README.md  alembic.ini  code-review-agent-design-doc.md  code-review-agent-github-gitlab-implementation-spec.md  code-review-agent-next-steps-implementation-plan.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.opencode/: installed-packs.json
.sisyphus/plans/: admin-dashboard.md
alembic/: env.py
alembic/versions/: 001_initial_tables.py  002_add_baseline_support.py  003_nullable_installation_id.py  004_add_user_table.py  005_add_app_config_table.py  006_add_policy_store_table.py  007_add_run_logs_column.py  008_add_v020_tables_and_columns.py
docs/: user-guide.md  user-manual-zh.md  v0.2.0-deployment-guide.md  v0.2.0-design-and-test-plan.md  v0.2.0-release-notes.md  v0.2.0design_draft.md
frontend/: index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
policies/: default.policy.yaml
prompts/: summarize.j2  synthesize.j2
scripts/: export_openapi.py
src/agent_review/: __init__.py  __main__.py  app.py  config.py  crypto.py  database.py
tests/: conftest.py  factories.py
tests/integration/: test_admin_policies.py  test_admin_scans.py  test_admin_settings.py  test_admin_users.py  test_auth_api.py  test_baseline_codeql_e2e.py  test_cors.py  test_multi_engine_e2e.py  test_oauth.py  test_pipeline_e2e.py  test_spa_serving.py  (+2 more)
(+176 files in other folders)
