[project]
name = "agent-review"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "gunicorn>=23",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.28",
    "cryptography>=44",
    "PyJWT>=2.10",
    "pyyaml>=6",
    "jinja2>=3.1",
    "structlog>=24",
    "litellm>=1.60",
    "pwdlib[argon2,bcrypt]>=0.2",
    "authlib>=1.3",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_review"]
